# opensbt-core

./: .dockerignore  .gitignore  .gitlab-ci.yml  DockerManager.sh  Dockerfile  HOW_TO_RUN_PACKAGE.md  README.md  SimulatorServer.py  TODOS.md  build_upload.sh  docker-compose.yml  dockerBuild&Run.sh  dockerBuild.sh  dockerRun.sh  docker_pyRequirements.py  optunaDashboard.sh  project.toml  requirements.txt  resultsAnalisys.ipynb  runDocker.md  runExperiment.py  runExperiment.sh  sample.json  setup.py  sudoCheck.sh
.github/workflows/: main.yml  sphinx.yml
Docker/: Dockerfile  RequirementsAggregator.py
Docker/DockerManager/: CheckGum.sh  buildSimulator.sh  dockerBuild.sh  dockerRun.sh  runSimulator.sh
SearchBasedTester/: pyproject.toml
SearchBasedTester/src/SearchBasedTester.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SearchBasedTester/src/SearchBasedTester/BasicClasses/: FitnessBase.py  InteractivePlotter.py  SampleBase.py
SearchBasedTesterScripts/: TestBlurs.ipynb  test.ipynb  test.py
Simulator/: Dockerfile  HOW_TO_RUN.md  RUN_EXAMPLE.py  SimulatorServer.py  requirements.txt
dbInteract/: DBinteract.py  MongoInteract.py  NoDB.py  __init__.py  dbLabels.py  requirements.txt
docs/: autobuild.sh  make_html.sh  requirements.txt
experimentsRunner/: ExperimentConfig.py  ExperimentLogger.py  ExperimentRunner.py  SearchField.py  __init__.py  dictionaryUtils.py  requirements.txt
lanekeeping/: HOW_TO_RUN.md  __init__.py  config.py  global_log.py  requirements.txt
opensbt/: config.py
tests/: test_default_experiments.py  test_experiments.py
(+180 files in other folders)
