[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "SearchBAsedTester"
version = "0.0.1"
authors = [
{ name="Paolo Ginefra, Matteo Figini, Antonio Oliva"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENCSE"]
dependencies = [
"pytest",
"pytest-cov",
]

[project.urls]